<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PPCore</string>
    <string name="title_activity_test_surface">TestSurface</string>
    <string name="draw">Draw</string>
    <string name="search">Search</string>
    <string name="test_omx">TestOmx</string>
    <string name="title_activity_test_omx">TestOmx</string>
    <string name="open">Open</string>
    <string name="setrole">SetRole</string>
    <string name="close">Close</string>
    <string name="setup">Setup</string>
    <string name="reset">Reset</string>
    <string name="decode">Decode</string>
    <string name="test">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">MainActivity</string>
    <string name="init">Init</string>
    <string name="checkCdKey">CheckCdKey</string>
    <string name="getPwd">GetPwd</string>
    <string name="logout">Logout</string>
    <string name="getHttpUrl">GetHttpUrl</string>
    <string name="login">Login</string>
    <string name="getSN">GetSN</string>
    <string name="getLife">GetLife</string>
    <string name="getExpire">GetExpire</string>
    <string name="getRtspUrl">GetRtspUrl</string>
    <string name="title_activity_flv_apple">FlvAppleActivity</string>
    <string name="title_activity_ts_apple">TsAppleActivity</string>
    <string name="title_activity_mutiplay">MutiplayActivity</string>

</resources>