<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/init"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:onClick="init"
        android:text="@string/init" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/checkCdKey"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:onClick="checkCdKey"
            android:text="@string/checkCdKey" />

        <EditText
            android:id="@+id/cdKey"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="none|textCapCharacters" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/getPwd"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:onClick="getPwd"
            android:text="@string/getPwd" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/login"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/login" />

        <EditText
            android:id="@+id/token"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/getSN"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:onClick="getSN"
            android:text="@string/getSN" />

        <EditText
            android:id="@+id/sn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters|number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/getExpire"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:onClick="getExpire"
            android:text="@string/getExpire" />

        <EditText
            android:id="@+id/expire"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters|time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/getLife"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:onClick="getLife"
            android:text="@string/getLife" />

        <EditText
            android:id="@+id/life"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters|time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/getRtspUrl"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:onClick="getRtspUrl"
            android:text="@string/getRtspUrl" />

        <EditText
            android:id="@+id/rtspUrl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters|textUri" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/getHttpUrl"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:onClick="getHttpUrl"
            android:text="@string/getHttpUrl" />

        <EditText
            android:id="@+id/httpUrl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters|textUri" />
    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:onClick="logout"
        android:text="@string/logout" />

</LinearLayout>